--- a/index.html
+++ b/index.html
@@ -845,38 +845,38 @@
 
     <!-- NEW TIMELINE SECTION -->
     <section class="timeline-section">
-        <h2 class="section-header">our story so far</h2>
+        <h2 class="section-header">biggest steps taken by my babygirl so far</h2>
         <div class="timeline">
             <!-- EVENT 1 -->
             <div class="timeline-item left">
                 <div class="timeline-content">
-                    <h3>EVENT NAME</h3>
-                    <span class="date">Month Day, Year</span>
-                    <p>Placeholder text for the event description. This is where you'll write about the memory. Keep it sweet and simple!</p>
+                    <h3>nervous affirmation</h3>
+                    <span class="date">january 19, 2023</span>
+                    <p>you made me wait, but were beyond worth it</p>
                 </div>
             </div>
             <!-- EVENT 2 -->
             <div class="timeline-item right">
                 <div class="timeline-content">
-                    <h3>ANOTHER EVENT</h3>
-                    <span class="date">Month Day, Year</span>
-                    <p>This is the description for the second event. You can talk about a milestone, a funny moment, or a feeling you had.</p>
+                    <h3>halfway to ownership</h3>
+                    <span class="date">May 26, 2023</span>
+                    <p>wore nothing but blue jeans and panties while sitting on my lap. enticing me with half the goods, and promising so much more</p>
                 </div>
             </div>
             <!-- EVENT 3 -->
             <div class="timeline-item left">
                 <div class="timeline-content">
-                    <h3>A SPECIAL DAY</h3>
-                    <span class="date">Month Day, Year</span>
-                    <p>Describe another significant moment in your relationship. The more personal, the better. She'll love reading these.</p>
+                    <h3>complete takeover of assets</h3>
+                    <span class="date">March, 2024</span>
+                    <p>let me have my way with you, delightfully naked, for the first time ever</p>
                 </div>
             </div>
             <!-- EVENT 4: FUTURE -->
             <div class="timeline-item right">
                 <div class="timeline-content">
-                    <h3>THE FUTURE...</h3>
-                    <span class="date">Soon...</span>
-                    <p>And here's to all the memories we have yet to make. I can't wait to fill this timeline with a lifetime of adventures with you.</p>
+                    <h3>what's it gonna be?</h3>
+                    <span class="date">August 2025</span>
+                    <p>what else of the wondrous bounty your body and mind is may i soon lay claim to?</p>
                 </div>
             </div>
         </div>
@@ -1344,7 +1344,7 @@
         function showDriveOptions() {
             renderCascadingNavigation({
                 contentArea: document.getElementById('contentArea'),
-                header: "so you wish to show yourself to me. how indecent of you. i love it",
+                header: "so you wish to show yourself to me. how indecent of you. i love it.",
                 appStateKey: 'driveNavigation',
                 optionsData: DRIVE_OPTIONS,
                 classNames: { breadcrumb: 'drive-breadcrumb', option: 'drive-option', root: 'Drive' },
