--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                 <div class="timeline-content">
                     <h3>what's it gonna be?</h3>
                     <span class="date">August 2025</span>
-                    <p>what else of the wondrous bounty your body and mind is may i soon lay claim to?</p>
+                    <p>what else of the wondrous bounty that your body and mind is may i soon lay claim to?</p>
                 </div>
             </div>
         </div>
