--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
             }
             
             document.getElementById('streak-number').textContent = storedData.count;
-            document.getElementById('streak-text').textContent = currentUser === 'her' ? "Devotion Streak: " : "Visitor Streak: ";
+            document.getElementById('streak-text').textContent = currentUser === 'her' ? "devotion streak: " : "maintenance streak: ";
         }
         
         document.addEventListener('DOMContentLoaded', function() {
