--- a/index.html
+++ b/index.html
@@ -649,9 +649,9 @@
         const INTRO_TEXT = {
             default: "hello, nistha.",
             morning: "good morning, sunshine.",
-            afternoon: "hope you're having a lovely day.",
-            evening: "tell me all about how your day went.",
-            night: "did you please me today? i bet you did.",
+            afternoon: "hope you're having a lovely day, baby.",
+            evening: "tell me all about how your day went, sweetheart.",
+            night: "did you please me today? i bet you did. good girl.",
             description: "step inside your private playground. here, you're free to be bold, to tease, to surrender, and to shine. every click, every word, every task is a secret invitation—just for you and me. let your desires show, let your devotion burn, and let’s make every moment on this page a little more wicked, a little more delicious, and a lot more unforgettable. are you ready to play?"
         };
         const PENDING_TASKS = [
