--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             color: var(--text-light);
             text-shadow: 0 2px 10px rgba(0,0,0,0.5);
             cursor: none;
-            transition: letter-spacing: 0.4s ease, color 0.4s ease;
+            transition: letter-spacing 0.4s ease, color 0.4s ease;
         }
         .main-title:hover {
             letter-spacing: 4px;
@@ -355,6 +355,7 @@
             flex-grow: 1;
             overflow-y: auto;
             padding: 40px;
+            min-height: 0; /* FIX: Allows flex item to shrink properly */
         }
         #persistent-timeline-wrapper {
             flex-shrink: 0;
@@ -374,10 +375,10 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            /* min-height removed */
             position: relative;
-            overflow: visible; /* Changed from hidden */
+            overflow: visible; /* FIX: Allows orb to be fully visible */
             margin-bottom: 50px;
+            padding-top: 50px; /* FIX: Creates space for the orb */
         }
         .intro-screen h2 {
             font-family: var(--font-heading);
@@ -433,7 +434,7 @@
         }
         
         .timeline-section {
-             padding-bottom: 10px; /* Added padding */
+             padding-bottom: 10px;
         }
 
         .timeline-scroll-wrapper {
