--- a/index.html
+++ b/index.html
@@ -664,10 +664,10 @@
             "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
         ];
         const MIND_OPTIONS = [
-            "I think I can work in an interview today. 😋",
-            "Maybe I can take you along for a trip to the shower? 🚿",
-            "I'd love a little one-on-one video call, maybe. 💞",
-            "Can you just teach me how to dirty-talk well with you? 😙"
+            "I think I can work in an interview today. ",
+            "Maybe I can take you along for a trip to the shower? ",
+            "I'd love a little one-on-one video call, maybe. ",
+            "Can you just teach me how to dirty-talk well with you? "
         ];
         const WHEEL_OPTIONS = [
             "10-sec video of my smile",
@@ -904,9 +904,9 @@
                                 </svg>
                             </div>
                             <div class="timeline-item" id="item-1"><div class="timeline-content"><h3>nervous affirmation</h3><span class="date">january 19, 2023</span><p>you made me wait, but were beyond worth it</p></div></div>
-                            <div class="timeline-item" id="item-2"><div class="timeline-content"><h3>halfway to ownership</h3><span class="date">May 26, 2023</span><p>wore nothing but blue jeans and panties while sitting on my lap, enticing me with half the goods, and promising so much more</p></div></div>
-                            <div class="timeline-item" id="item-3"><div class="timeline-content"><h3>complete takeover of assets</h3><span class="date">March, 2024</span><p>let me have my way with you, delightfully naked, for the first time ever</p></div></div>
-                            <div class="timeline-item" id="item-4"><div class="timeline-content"><h3>what's it gonna be?</h3><span class="date">August 2025</span><p>what else of the wondrous bounty your body and mind is may i soon lay claim to?</p></div></div>
+                            <div class="timeline-item" id="item-2"><div class="timeline-content"><h3>halfway to ownership</h3><span class="date">may 26, 2023</span><p>wore nothing but blue jeans and panties while sitting on my lap, enticing me with half the goods, and promising so much more</p></div></div>
+                            <div class="timeline-item" id="item-3"><div class="timeline-content"><h3>complete takeover of assets</h3><span class="date">march, 2024</span><p>let me have my way with you, delightfully naked, for the first time ever</p></div></div>
+                            <div class="timeline-item" id="item-4"><div class="timeline-content"><h3>what's it gonna be?</h3><span class="date">august 2025</span><p>what else of the wondrous bounty your body and mind is may i soon lay claim to?</p></div></div>
                         </div>
                     </div>
                 </section>`;
