--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@
             align-items: center;
             text-align: center;
             position: relative;
-            overflow: visible; /* FIX: Allows orb to be fully visible */
+            overflow: visible; 
             margin-bottom: 50px;
-            padding-top: 50px; /* FIX: Creates space for the orb */
+            padding-top: 50px; 
         }
         .intro-screen h2 {
             font-family: var(--font-heading);
@@ -664,10 +664,10 @@
             "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
         ];
         const MIND_OPTIONS = [
-            "I think I can work in an interview today. ",
-            "Maybe I can take you along for a trip to the shower? ",
-            "I'd love a little one-on-one video call, maybe. ",
-            "Can you just teach me how to dirty-talk well with you? "
+            "I think I can work in an interview today. 😋",
+            "Maybe I can take you along for a trip to the shower? 🚿",
+            "I'd love a little one-on-one video call, maybe. 💞",
+            "Can you just teach me how to dirty-talk well with you? 😙"
         ];
         const WHEEL_OPTIONS = [
             "10-sec video of my smile",
@@ -904,9 +904,9 @@
                                 </svg>
                             </div>
                             <div class="timeline-item" id="item-1"><div class="timeline-content"><h3>nervous affirmation</h3><span class="date">january 19, 2023</span><p>you made me wait, but were beyond worth it</p></div></div>
-                            <div class="timeline-item" id="item-2"><div class="timeline-content"><h3>halfway to ownership</h3><span class="date">may 26, 2023</span><p>wore nothing but blue jeans and panties while sitting on my lap, enticing me with half the goods, and promising so much more</p></div></div>
-                            <div class="timeline-item" id="item-3"><div class="timeline-content"><h3>complete takeover of assets</h3><span class="date">march, 2024</span><p>let me have my way with you, delightfully naked, for the first time ever</p></div></div>
-                            <div class="timeline-item" id="item-4"><div class="timeline-content"><h3>what's it gonna be?</h3><span class="date">august 2025</span><p>what else of the wondrous bounty your body and mind is may i soon lay claim to?</p></div></div>
+                            <div class="timeline-item" id="item-2"><div class="timeline-content"><h3>halfway to ownership</h3><span class="date">May 26, 2023</span><p>wore nothing but blue jeans and panties while sitting on my lap, enticing me with half the goods, and promising so much more</p></div></div>
+                            <div class="timeline-item" id="item-3"><div class="timeline-content"><h3>complete takeover of assets</h3><span class="date">March, 2024</span><p>let me have my way with you, delightfully naked, for the first time ever</p></div></div>
+                            <div class="timeline-item" id="item-4"><div class="timeline-content"><h3>what's it gonna be?</h3><span class="date">August 2025</span><p>what else of the wondrous bounty your body and mind is may i soon lay claim to?</p></div></div>
                         </div>
                     </div>
                 </section>`;
@@ -1028,7 +1028,6 @@
                 card.className = className;
                 card.innerHTML = `<span>${optionText}</span>`;
                 card.addEventListener('click', (e) => {
-                    e.stopPropagation(); // Keep stopPropagation for specific card clicks
                     clickHandler(optionText);
                 });
                 container.appendChild(card);
@@ -1048,14 +1047,14 @@
                 const rootItem = document.createElement('span');
                 rootItem.className = 'breadcrumb-item';
                 rootItem.textContent = classNames.root;
-                rootItem.addEventListener('click', (e) => { e.stopPropagation(); resetNav(); });
+                rootItem.addEventListener('click', (e) => { resetNav(); });
                 breadcrumbContainer.appendChild(rootItem);
                 navigationPath.forEach((item, index) => {
                     breadcrumbContainer.innerHTML += `<span class="breadcrumb-separator"> </span>`;
                     const breadcrumbItem = document.createElement('span');
                     breadcrumbItem.className = 'breadcrumb-item';
                     breadcrumbItem.textContent = item;
-                    breadcrumbItem.addEventListener('click', (e) => { e.stopPropagation(); navigateTo(index); });
+                    breadcrumbItem.addEventListener('click', (e) => { navigateTo(index); });
                     breadcrumbContainer.appendChild(breadcrumbItem);
                 });
                 contentArea.appendChild(breadcrumbContainer);
@@ -1071,7 +1070,6 @@
                 optionEl.className = classNames.option;
                 optionEl.innerHTML = `<span>${optionText}</span>`;
                 optionEl.addEventListener('click', (e) => {
-                    e.stopPropagation();
                     clickHandler(optionText, clickLevel);
                 });
                 contentArea.appendChild(optionEl);
@@ -1088,7 +1086,7 @@
                     const optionEl = document.createElement('div');
                     optionEl.className = 'play-option';
                     optionEl.innerHTML = `<span>${option}</span>`;
-                    optionEl.addEventListener('click', (e) => { e.stopPropagation(); handlePlayOptionClick(option); });
+                    optionEl.addEventListener('click', (e) => { handlePlayOptionClick(option); });
                     contentArea.appendChild(optionEl);
                 });
             } else {
@@ -1098,7 +1096,7 @@
                 const rootItem = document.createElement('span');
                 rootItem.className = 'breadcrumb-item';
                 rootItem.textContent = 'Games';
-                rootItem.addEventListener('click', (e) => { e.stopPropagation(); resetPlayNavigation(); });
+                rootItem.addEventListener('click', (e) => { resetPlayNavigation(); });
                 breadcrumbContainer.appendChild(rootItem);
                 breadcrumbContainer.innerHTML += `<span class="breadcrumb-separator"> </span><span class="breadcrumb-item">${selectedOption}</span>`;
                 contentArea.appendChild(breadcrumbContainer);
@@ -1106,7 +1104,7 @@
                     const subOptionEl = document.createElement('div');
                     subOptionEl.className = 'play-sub-option';
                     subOptionEl.textContent = subOption;
-                    subOptionEl.addEventListener('click', (e) => { e.stopPropagation(); handlePlaySubClick(subOption); });
+                    subOptionEl.addEventListener('click', (e) => { handlePlaySubClick(subOption); });
                     contentArea.appendChild(subOptionEl);
                 });
             }
@@ -1240,7 +1238,6 @@
             document.querySelectorAll('a, button, .tab, .main-title, .spin-button, .task-card, .mind-option, .drive-option, .growth-option, .play-option, .play-sub-option, .breadcrumb-item, .theme-toggle').forEach(el => {
                 el.addEventListener('mouseenter', () => cursorDot.style.transform = 'translate(-50%, -50%) scale(2)');
                 el.addEventListener('mouseleave', () => cursorDot.style.transform = 'translate(-50%, -50%) scale(1)');
-                // Stop propagation on specific interactive elements to prevent double heart explosions on cards etc.
                 el.addEventListener('click', function(e) {
                     e.stopPropagation();
                 });
